--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 :root {
     --main-color: #ffa600;
-    --accent-color: #b4a44b;
+    --accent-color: #514a21;
     --background-color: #1b201b;
     --text-color: #222;
     --border-color: #ddd;
@@ -59,6 +59,11 @@ hr {
 
 
 h2 {
+    color: var(--main-color);
+
+}
+
+h3 {
     color: var(--main-color);
     padding-left: 0.5rem;
 }
@@ -159,5 +164,51 @@ a[id*="Seconnecter"] {
 }
 
 
+
+/* ---------- Catalogue de séries ---------- */
+.series {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 1.2rem;
+    background: transparent; /* pas de fond général */
+    padding: 1rem 0;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.series .serie {
+    background-color: var(--C1element);
+    border: 1px solid var(--border-color);
+    border-radius: var(--radius);
+    overflow: hidden;
+    max-height: 300px;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.series .serie img {
+    width: 100%;
+    height: 100%;
+    
+    object-fit: cover;
+    border-bottom: 1px solid var(--border-color);
+}
+
+
+.series .serie {
+    padding: 0.8rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.series .serie h3 {
+    color: var(--main-color);
+    font-size: 1.1rem;
+    margin: 0 0 0.5rem;
+}
 
 
